# license-core

./: .gitmessage  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
