[package]
name = "license-core"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
semver = "1"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
base64 = "0.21"